deployment/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: craig
  labels:
    app: craig
spec:
  ports:
    - name: app
      port: 3000
      protocol: TCP
      targetPort: 3000
    - name: api
      port: 5029
      protocol: TCP
      targetPort: 5029
  selector:
    app: craig
