deployment/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: craig-app
  labels:
    app.kubernetes.io/name: craig-app
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - craig-app.cs.web3factory.consensys.net
  rules:
    - host: craig-app.cs.web3factory.consensys.net
      http:
        paths:
        - backend:
            service:
              name: craig
              port:
                number: 3000
          path: /
          pathType: Prefix
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: craig-api
  labels:
    app.kubernetes.io/name: craig-api
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - craig-api.cs.web3factory.consensys.net
  rules:
    - host: craig-api.cs.web3factory.consensys.net
      http:
        paths:
        - backend:
            service:
              name: craig
              port:
                number: 5029
          path: /
          pathType: Prefix
